src/assets/scss/components/icon-editor.scss
.icon-editor {
  background-color: $modal-background-color;
  display: flex;
  height: 100%;
  left: 0;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: $z-index-100;

  &-card {
    background-color: white;
    border-radius: $s;
    left: 50%;
    max-width: 1000px;
    padding-bottom: 20px;
    position: fixed;
    top: 50%;
    transform: translate(-50%, -50%);
  }

  h2 {
    margin: $l;
  }

  .icon-editor-content {
    padding: $s $xxl $xxl $xxl;
  }

  .icon-editor-btn {
    color: $light-color;
    font-weight: bold;
    padding: 16px;

    &:hover {
      cursor: pointer;
      opacity: 1;
    }

    &-cancel {
      background-color: #b8bece;
      border-radius: 0px 0px 0px 7px;
    }

    &-accept {
      background-color: #eb796f;
      border-radius: 0px 0px 7px 0px;
    }
  }

  .close {
    opacity: 0.3;
    position: absolute;
    right: $xxl;
    top: $m;

    &:hover {
      cursor: pointer;
      opacity: 1;
    }

    &:before,
    &:after {
      background-color: #333;
      content: ' ';
      height: $m;
      left: $m;
      position: absolute;
      width: $xs;
    }

    &:before {
      transform: rotate(45deg);
    }

    &:after {
      transform: rotate(-45deg);
    }
  }

  .icon-div {
    align-items: center;
    display: flex;
    flex-direction: column;
    margin-left: 100px;
    right: 20px;
  }

  .icon-preview-box {
    align-items: center;
    display: flex;
    justify-content: center;
  }

  .nxt-icon-btn {
    font-size: $l;
    height: $l;
    text-align: center;
    user-select: none;
    width: $l;

    &:hover {
      background-color: $dark-gray;
      border: 0px;
      border-radius: $l;
      color: $light-color;
      cursor: pointer;
      height: $l;
      transition-duration: 0.2s;
      width: $l;
    }
  }

  .icon-preview {
    background-image: url('../../images/white-grey-checkbox.svg');
    background-size: $xl * 12;
    border-radius: $s;
    height: $l * 8;
    margin: $xs;
    text-align: center;
    width: $l * 8;

    i {
      font-size: $editor-icon-size;
      position: relative;
      top: $l;
    }
  }

  .btn-loading-icon {
    margin-left: $s;
    vertical-align: middle;
    width: $l;
  }
}

.export-btn,
.size-selector {
  display: flex;
  justify-content: flex-start;
  width: 100%;

  button {
    margin-top: $l;
  }
}

.size-selector {
  flex-direction: column;
  padding-top: $l;

  i {
    position: absolute;
    right: 55px;
    z-index: -1;
  }
}

.type-selector {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  width: 100%;

  &-option {
    align-items: center;
    align-self: center;
    display: flex;
    width: 50%;

    label {
      font-weight: 400;
      margin-left: 8px;
    }
  }
}

.transform-div {
  display: flex;
  flex-direction: row;
  margin-bottom: $l;
  width: 100%;


  p {
    color: $dark-gray;
    font-weight: 400;
    margin-bottom: 0;
  }

  div {
    display: flex;
    flex-direction: column;

    div {
      display: flex;
      flex-direction: row;
    }
  }

  .rotate-flip-icon {
    transform: rotateZ(90deg);
  }

  button {
    background-color: $light-color;
    border: 0px;
    border-radius: $xs;
    color: $dark-gray;

    i {
      color: $color;
      margin: $xs;
    }

    &:hover {
      background-color: $dark-gray;
      color: $light-color;
      transition-duration: 0.2s;
    }

    &:focus {
      outline: none;
    }
  }
}

